proyecto-04/01_Primera_maquina/mlflow/manifests/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlops-project  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: luisfrontuso10/mlflow-houses:20250602-9b599aa
        ports:
        - containerPort: 5000
        command:
        - sh
        - -c
        - |
          # Esperar a que los servicios estén disponibles
          echo "Esperando 20 segundos para que los servicios estén listos..."
          sleep 20
          
          # Iniciar MLflow
          echo "Iniciando MLflow server..."
          mlflow server \
            --backend-store-uri postgresql://mlflow:mlflow123@postgres.mlops-project.svc.cluster.local:5432/mlflow \
            --default-artifact-root s3://mlflow-artifacts/ \
            --host 0.0.0.0 \
            --port 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlops-project  
spec:
  selector:
    app: mlflow
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
  type: NodePort
